{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 23,
  "lineage": "cf05af4e-4482-8a74-c999-1babe3a0bb49",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/networkInterfaces/BhanuOps-RG001-NIC1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/publicIPAddresses/BhanuOps-RG001-PUBIP1",
                "subnet_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1/subnets/BhanuOps-RG001-VNET1-SUBNET1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-A7-49-79",
            "name": "BhanuOps-RG001-NIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "RG001",
            "virtual_machine_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Compute/virtualMachines/BHANULINUXVM01"
          },
          "dependencies": [
            "azurerm_public_ip.pubip1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/networkSecurityGroups/BhanuOps-RG001-NSG1",
            "location": "eastus",
            "name": "BhanuOps-RG001-NSG1",
            "resource_group_name": "RG001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/networkSecurityGroups/BhanuOps-RG001-NSG1/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "BhanuOps-RG001-NSG1",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "RG001",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/publicIPAddresses/BhanuOps-RG001-PUBIP1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "BhanuOps-RG001-PUBIP1",
            "resource_group_name": "RG001",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1/subnets/BhanuOps-RG001-VNET1-SUBNET1",
            "name": "BhanuOps-RG001-VNET1-SUBNET1",
            "resource_group_name": "RG001",
            "virtual_network_name": "BhanuOps-RG001-VNET1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1/subnets/BhanuOps-RG001-VNET1-SUBNET1",
            "network_security_group_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/networkSecurityGroups/BhanuOps-RG001-NSG1",
            "subnet_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1/subnets/BhanuOps-RG001-VNET1-SUBNET1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cb659feb-d19d-482d-be4c-958997b3eff1",
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1",
            "location": "eastus",
            "name": "BhanuOps-RG001-VNET1",
            "resource_group_name": "RG001",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/virtualNetworks/BhanuOps-RG001-VNET1/subnets/BhanuOps-RG001-VNET1-SUBNET1",
                "name": "BhanuOps-RG001-VNET1-SUBNET1",
                "security_group": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/RG001/providers/Microsoft.Network/networkSecurityGroups/BhanuOps-RG001-NSG1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}